add constants for MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">myproj</string>
+    <string name="MainActivityChooserTitle">Choose the app</string>
+    <string name="MainActivityChooserEmail">valera@gmail.com</string>
 </resources>
