--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">myproj</string>
+    <string name="MainActivityBtnSendEmailTitle">SEND EMAIL</string>
     <string name="MainActivityChooserTitle">Choose the app</string>
     <string name="MainActivityChooserEmail">valera@gmail.com</string>
 </resources>
